--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-        <link rel="shortcut icon" type="image/png" href="/icon.png" />
+        <link rel="shortcut icon" type="image/png" href="icon.png" />
 
         <link
             href="https://fonts.googleapis.com/css?family=Poppins:400,500,600&display=swap"
@@ -18,11 +18,11 @@
         <!-- TOP NAVIGATION -->
         <nav>
             <p class="welcome">Log in to get started</p>
-            <!-- <img src="logo.png" alt="Logo" class="logo" /> -->
+            <img src="logo.png" alt="Logo" class="logo" />
             <form class="login">
                 <input
                     type="text"
-                    placeholder="user"
+                    placeholder="User"
                     class="login__input login__input--user"
                 />
                 <!-- In practice, use type="password" -->
@@ -128,10 +128,6 @@
                 You will be logged out in <span class="timer">05:00</span>
             </p>
         </main>
-
-        <!-- <footer>
-      &copy; by Jonas Schmedtmann. Don't claim as your own :)
-    </footer> -->
 
         <script src="script.js"></script>
     </body>
