--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         />
         <link rel="stylesheet" href="style.css" />
         <title>Bankist | Banking, Simplified</title>
+        <script defer src="script.js"></script>
     </head>
     <body>
         <header class="header">
@@ -392,7 +393,5 @@
             </form>
         </div>
         <div class="overlay hidden"></div>
-
-        <script src="script.js"></script>
     </body>
 </html>
